Add a program to check timer consistency
Signed-off-by: Samuel Holland <samuel@sholland.org>

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: GPL-2.0-only
 #
 
-bin-y += check_counter
+bin-y += check_counter check_timer
 
 check_counter-objs := check_counter.o smp.o
+check_timer-objs := check_timer.o smp.o
