--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,6 @@
 # SPDX-License-Identifier: GPL-2.0-only
 #
 
-bin-y += check_counter check_timer
+bin-y += timer_test
 
-check_counter-objs := check_counter.o smp.o
-check_timer-objs := check_timer.o smp.o
+timer_test-objs := check_counter.o check_timer.o smp.o timer_test.o
